Small Fixes
-Password is now striped of whitespace on ends
-Links are no longer blue underlined monstrosities
-Rename for file entries now works

--- a/system/css/style.css
+++ b/system/css/style.css
@@ -46,6 +46,7 @@
   font-family: 'Lora', serif;
   color: #8b8b8b;
   margin-top: 10%;
+  font-style: normal !important;
 }
 
 .content .date {
@@ -89,6 +90,13 @@ canvas:focus {
   margin-bottom: 70px;
 }
 
+.content a {
+  font-family: 'Lora', serif;
+  color: #8b8b8b;
+  text-decoration: none;
+  font-style: italic;
+}
+
 .content .more_link {
   display: block;
   padding-bottom: 20px;
@@ -96,7 +104,7 @@ canvas:focus {
   font-family: 'Lora', serif;
   color: #a2a2a2;
   font-size: 18px;
-  text-decoration: none;
+  text-decoration: none; 
 }
 
 #about_title {
