--- a/system/css/style_small.css
+++ b/system/css/style_small.css
@@ -47,6 +47,7 @@
   font-family: 'Lora', serif;
   color: #8b8b8b;
   margin-top: 10%;
+  font-style: normal !important;
 }
 
 .content .date {
@@ -75,6 +76,13 @@ canvas:focus {
   font-family: 'Lora', serif;
   font-size: 1em;
   color: #a2a2a2;
+}
+
+.content a {
+  font-family: 'Lora', serif;
+  color: #8b8b8b;
+  text-decoration: none;
+  font-style: italic;
 }
 
 .content img {
